--- a/web/include/media/offcanvas.html
+++ b/web/include/media/offcanvas.html
@@ -10,7 +10,7 @@
       Media <a
         href="/media"
         target="_blank"
-      >{{ bootstrap_icon(box-arrow-up-right) }}</a>
+      ><Icon name="box-arrow-up-right"></a>
     </h2>
     <button
       type="button"
@@ -20,6 +20,6 @@
     ></button>
   </div>
   <div class="offcanvas-body">
-    {{ media/main(add_button=1, class="col") }}
+    <MediaMain add_button="1" class="col">
   </div>
 </div>
