--- a/web/include/scene/menu/layers/layer_list_item.html
+++ b/web/include/scene/menu/layers/layer_list_item.html
@@ -35,7 +35,7 @@
           )
         }}
         {{
-          icon_button(
+          button(
             icon="chevron-up",
             outline=1,
             small=1,
@@ -43,7 +43,7 @@
           )
         }}
         {{
-          icon_button(
+          button(
             icon="chevron-down",
             outline=1,
             small=1,
@@ -51,7 +51,7 @@
           )
         }}
         {{
-          icon_button(
+          button(
             icon="trash3",
             outline=1,
             small=1,
