--- a/web/include/project/project.html
+++ b/web/include/project/project.html
@@ -1,4 +1,9 @@
-<div class="container py-5">
+<!--
+  Project entry for the projects page.
+  Expects a struct ProjectListEntry object to be in scope, as well as a
+  variable scene_list containing HTML for the project's list of scenes.
+-->
+<div id="project_${project.project_key}" class="container py-5">
   <div class="row">
     <div class="col">
       <EditableInput
@@ -15,7 +20,12 @@
       >
     </div>
     <div class="col align-self-end d-flex">
-      <Button class="ms-auto btn-danger" icon="trash3" text="Delete">
+      <Button
+        class="ms-auto btn-danger"
+        icon="trash3"
+        text="Delete"
+        onclick="delete_project('${project.project_key}', '${project.title}')"
+      >
     </div>
   </div>
   <hr>
