move api routes to /api/

--- a/web/include/header.html
+++ b/web/include/header.html
@@ -14,7 +14,7 @@
             class="nav-link"
             style="cursor: pointer;"
             onclick="
-              fetch('/logout', { method: 'POST' }).then(
+              fetch('/api/logout', { method: 'POST' }).then(
                 () => window.location = '/'
               )
             "
