--- a/web/include/media/modal.html
+++ b/web/include/media/modal.html
@@ -20,7 +20,7 @@ aria-hidden="true"
       ></button>
     </div>
     <div class="modal-body">
-      <Form id="media_details_form" class="col" action="/media/details">
+      <Form id="media_details_form" class="col" action="/api/media/details">
         <FormField id="media_details_title" name="Title">
         <FormField id="media_details_media_key" type="hidden">
       </Form nosubmit="">
