--- a/web/include/media/card.html
+++ b/web/include/media/card.html
@@ -3,7 +3,7 @@
     <img
       class="card-img-top"
       style="height: 8rem; object-fit: cover;"
-      src="${src}"
+      src="${url}"
       data-key="${key}"
       data-title="${title}"
     >
