solve media offcanvas issue

--- a/web/include/media/main.html
+++ b/web/include/media/main.html
@@ -8,7 +8,7 @@
       <div class="col-sm-6 d-flex mb-2">
         <input
           type="text"
-          class="ms-2 form-control"
+          class="form-control"
           style="max-width: 20rem;"
           oninput="search_filter(this.value);"
         >
