start thinking about media sizes

--- a/web/include/media/card.html
+++ b/web/include/media/card.html
@@ -6,6 +6,8 @@
       src="${url}"
       data-key="${key}"
       data-title="${title}"
+      data-width="${width}"
+      data-height="${height}"
     >
     <div class="card-body">
       <p class="card-text text-truncate">${title}</p>
