make media width and height editable from library

--- a/web/include/media/card.html
+++ b/web/include/media/card.html
@@ -4,10 +4,10 @@
       class="card-img-top"
       style="height: 8rem; object-fit: cover;"
       src="${url}"
-      data-key="${key}"
+      data-media_key="${key}"
       data-title="${title}"
-      data-width="${width}"
-      data-height="${height}"
+      data-w="${w}"
+      data-h="${h}"
     >
     <div class="card-body">
       <p class="card-text text-truncate">${title}</p>
