--- a/web/include/loading_icon.html
+++ b/web/include/loading_icon.html
@@ -2,7 +2,7 @@
   <div class="spinner-border spinner-border-sm ms-auto me-auto"></div>
   <div class="text-success">{{ bootstrap_icon(check-circle) }}</div>
   <div class="text-danger">{{ bootstrap_icon(exclamation-triangle) }}</div>
-  IFDEF(DEFAULT_ICON) {{<div class="loading-default-icon">
-    {{ bootstrap_icon({{ DEFAULT_ICON }}) }}
+  IFDEF(ICON) {{<div class="loading-default-icon">
+    {{ bootstrap_icon({{ ICON }}) }}
   </div>}}
 </div>
