--- a/web/include/scene/project/project_offcanvas.html
+++ b/web/include/scene/project/project_offcanvas.html
@@ -1,4 +1,3 @@
-{{ javascript(scene/project/project.js) }}
 <div
   class="offcanvas offcanvas-start"
   tabindex="-2"
@@ -11,19 +10,18 @@
       </button>
   </div>
   <div class="offcanvas-body">
-    {{ nav/start() }}
-      {{ nav/item(tab=load, selected=true) }}
-      {{ nav/item(tab=save) }}
-    {{ nav/end() }}
-
+    <Nav>
+      <NavItem tab="load" selected="">
+      <NavItem tab="save">
+    </Nav>
     <div class="tab-content">
-      {{ tab/start(tab=load, selected=true) }}
+      <Tab tab="load" selected="">
         <div class="row py-2">
           <div class="input-group">
             <span class="input-group-text">Project</span>
             <select class="form-select" id="project_select"></select>
             <span class="input-group-text">
-              {{ loading_icon(id=project_select_loading, default_icon=archive) }}
+              <LoadingIcon id="project_select_loading" icon="archive">
             </span>
           </div>
         </div>
@@ -32,31 +30,29 @@
             <span class="input-group-text">Scene</span>
             <select class="form-select" id="scene_select"></select>
             <span class="input-group-text">
-              {{ loading_icon(id=scene_select_loading, default_icon=archive) }}
+              <LoadingIcon id="scene_select_loading" icon="archive">
             </span>
           </div>
         </div>
-      {{ tab/end() }}
-      {{ tab/start(tab=save) }}
+      </Tab>
+      <Tab tab="save">
         <div class="row py-2">
-          {{
-            editable_input(
-              id=project_title,
-              label=Project,
-              feedback=1,
-              button=1
-            )
-          }}
+          <EditableInput
+            id="project_title"
+            label="Project"
+            feedback=""
+            button=""
+            enabled=""
+          >
         </div>
         <div class="row py-2">
-          {{
-            editable_input(
-              id=scene_title,
-              label=Scene,
-              feedback=1,
-              button=1
-            )
-          }}
+          <EditableInput
+            id="scene_title"
+            label="Scene"
+            feedback=""
+            button=""
+            enabled=""
+          >
         </div>
         <div class="row py-2">
           <div class="btn-group">
@@ -66,11 +62,12 @@
               onclick="save_project();"
             >Save</button>
             <button class="btn btn-outline-primary btn-group-icon" disabled>
-              {{ loading_icon(id=save_project_loading, default_icon=save) }}
+              <LoadingIcon id="save_project_loading" icon="save">
             </button>
           </div>
         </div>
-      {{ tab/end() }}
+      </Tab>
     </div>
   </div>
 </div>
+<Js src="scene/project/project.js">
