--- a/web/include/media/offcanvas.html
+++ b/web/include/media/offcanvas.html
@@ -20,6 +20,6 @@
     ></button>
   </div>
   <div class="offcanvas-body">
-    <MediaMain add_button="1" class="col">
+    <MediaMain scene="1" class="col">
   </div>
 </div>
