split history and changes from interactor

--- a/web/include/scene/project/project_offcanvas.html
+++ b/web/include/scene/project/project_offcanvas.html
@@ -5,9 +5,16 @@
   aria-labelledby="project_offcanvas_label"
 >
   <div class="offcanvas-header">
-      <h2 class="offcanvas-title" id="project_offcanvas_label">Project</h4>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
-      </button>
+      <h2 class="offcanvas-title" id="project_offcanvas_label">Project <a
+        href="/project"
+        target="_blank"
+      ><Icon name="box-arrow-up-right"></a></h2>
+      <button
+        type="button"
+        class="btn-close text-reset"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"
+      ></button>
   </div>
   <div class="offcanvas-body">
     <Nav>
