implement fog of war revealing and occluding

--- a/web/include/radio_check.html
+++ b/web/include/radio_check.html
@@ -25,6 +25,7 @@ IFDEF(FORM) {{
   >
   <label
     class="btn btn-sm btn-outline-primary"
+    id="{{ ID }}_label"
     for="{{ ID }}"
   >{{ LABEL }}</label>
 }}
