--- a/web/include/scene/menu/tools/tools_menu.html
+++ b/web/include/scene/menu/tools/tools_menu.html
@@ -29,6 +29,14 @@
             action="select_tool('Draw')"
           )
         }}
+        {{
+          radio_check(
+            id="tool_radio_fog",
+            group="tool_radio",
+            label='{{ bootstrap_icon(cloud-fog2) }}',
+            action="select_tool('Fog')"
+          )
+        }}
       </div>
     |
   )
