server saves scene on an interval, shuts down after timeout

--- a/web/include/projects/scene.html
+++ b/web/include/projects/scene.html
@@ -2,7 +2,7 @@
   Scene list entry. Expects a SceneListEntry object called scene to be in
   scope.
 -->
-<div id="scene_${scene.scene_key}" class="col-sm-2">
+<div id="scene_${scene.scene_key}" class="col-lg-2">
   <div class="card">
     <img
       class="card-img-top"
