--- a/web/include/scene/menu/scene/scene_menu.html
+++ b/web/include/scene/menu/scene/scene_menu.html
@@ -25,23 +25,37 @@
           action="v => update_scene_details('h', v)"
         )
       }}
-      <div class="input-group input-group-sm mt-2">
-        <div class="input-group-text">
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="scene_menu_fog"
-              oninput="update_scene_details('fog', this.checked);"
-            >
-          </div>  
+      <div class="d-flex">
+        <div
+          class="input-group input-group-sm mt-2"
+          style="display: inline-flex; width: unset; flex-shrink: 0;"
+        >
+          <div class="input-group-text">
+            <label
+              for="scene_menu_fog"
+            >Fog of War</label>
+          </div>
+          <div class="input-group-text">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="scene_menu_fog"
+                oninput="update_scene_details('fog', this.checked);"
+              >
+            </div>  
+          </div>
         </div>
-        <div class="input-group-text">
-          <label
-            for="scene_menu_fog"
-          >Fog of War</label>
-        </div>
+        <div
+          class="input-group input-group-sm mt-2 ms-2"
+          style="display: inline-flex; flex-grow: 1;"
+        >
+          <div class="input-group-text">
+            <label for="scene_menu_change_scene">Change Scene</label>
+          </div>
+          <select class="form-select" id="scene_menu_change_scene"></select>
+        </div>  
       </div>
     |
   )
