--- a/web/include/scene/game/game_offcanvas.html
+++ b/web/include/scene/game/game_offcanvas.html
@@ -7,67 +7,52 @@
 >
   <div class="offcanvas-header">
       <h2 class="offcanvas-title" id="game_offcanvas_label">Game</h4>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
-      </button>
+      <button
+        type="button"
+        class="btn-close text-reset"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"
+      ></button>
   </div>
   <div class="offcanvas-body">
-    {{ nav/start() }}
-      {{ nav/item(tab=current_game, label=Current) }}
-      {{ nav/item(tab=launch_game, label=Launch, selected=true) }}  
-      {{ nav/item(tab=join_game, label=Join) }}
-    {{ nav/end() }}
+    <Nav>
+      <NavItem tab="current_game" label="Current">
+      <NavItem tab="launch_game" label="Launch" selected="">  
+      <NavItem tab="join_game" label="Join">
+    </Nav>
     <div class="tab-content">
-      {{ tab/start(tab=current_game) }}
+      <Tab tab="current_game">
         <div class="p-2">
           <h3>Invite Players</h3>
           <p><a target="_blank" id="join_game_link"></a></p>
           <button
             class="btn btn-primary"
             id="copy_join_game_link_btn"
-          >Copy Link {{ bootstrap_icon(clipboard) }}</button>
+          >Copy Link <Icon name="clipboard"></button>
         </div>
-      {{ tab/end() }}
-      {{ tab/start(tab=launch_game, selected=true) }}
+      </Tab>
+      <Tab tab="launch_game" selected="">
         <div class="p-2">
           <div class="row py-2">
             <button
               type="button"
               class="btn btn-primary"
               onclick="new_game();"
-            >Launch Game {{ bootstrap_icon(arrow-up-right-square) }}</button>
+            >Launch Game <Icon name="arrow-up-right-square"></button>
           </div>
           <div class="row py-2">
-            <p id="launch_game_error" class="form-text text-danger d-none">Error message.</p>
+            <p
+              id="launch_game_error"
+              class="form-text text-danger d-none"
+            >Error message.</p>
           </div>
         </div>
-      {{ tab/end() }}
-      {{ tab/start(tab=join_game) }}
+      </Tab>
+      <Tab tab="join_game">
         <div class="p-2">
-          <form id="join_game_form" class="needs-validation" onsubmit="join_game(); return false;">
-            <div class="row py-2">
-              <input
-                type="text"
-                id="game_key"
-                placeholder="Game key"
-                class="form-control"
-                minlength="{{ constant(GAME_KEY_LENGTH) }}"
-                maxlength="{{ constant(GAME_KEY_LENGTH) }}"
-                required
-              >
-              <div
-                class="invalid-feedback"
-                data-feedback-for="game_key"
-              >Game keys are {{ constant(GAME_KEY_LENGTH) }} characters, A-F 0-9.</div>
-            </div>
-            <div class="row py-2">
-              <button
-                type="submit"
-                class="btn btn-primary"
-              >Join Game {{ bootstrap_icon(arrow-down-right-square) }}</button>
-            </div>
-          </form> 
+          <a href="/game" target="_blank">Join a game</a>
         </div>
-      {{ tab/end() }}
+      </Tab>
     </div>
   </div>
 </div>
