--- a/web/include/media/main.html
+++ b/web/include/media/main.html
@@ -47,7 +47,7 @@
         id="media_upload"
         name="Upload Media"
         type="file"
-        accept="image/png,image/jpg"
+        accept="image/png,image/jpeg"
         multiple=""
         autocomplete="off"
       >
